--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
     <h1> Blantyre shop mall </h1>
     <h2>2 ha of land </h2>
     <h2> price : MWK 20Million</h2>
-    <form action="/check_out" method="post">
+    <form action="/checkout" method="post">
 
         <input type="submit" value="payment checkout">
     </form>
