--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,12 +22,13 @@
 
     
 
-<script>
+<!-- <script>
 document.addEventListener('DOMContentLoaded', function() {
   document.querySelector('form').addEventListener('submit', async function(event) {
     event.preventDefault();
     const formData = new FormData(this);
-    const response = await fetch('/api/auth', {
+    console.log(formData)
+    const response = await fetch('/api/auth/', {
       method: 'POST',
       body: formData,
     });
@@ -38,7 +39,7 @@ document.addEventListener('DOMContentLoaded', function() {
     }
   });
 });
-</script>
+</script> -->
 </body>
 </html>
 
